<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_inscription_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:text="@string/administrateur_inscription_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/admin_inscription_ta_pseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/admin_inscr_pseudo"
        android:inputType="text" />

    <EditText
        android:id="@+id/admin_inscription_ta_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/admin_inscr_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/admin_inscription_ta_password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/admin_inscr_password_retype"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/admin_inscription_ta_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/admin_inscr_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/admin_inscription_bout_inscription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:textColor="@drawable/button_color_selector" 
        android:padding="10dp"
        android:onClick="inscription"
        android:text="@string/admin_inscription_bout_inscription" />

</LinearLayout>