<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ecran_choix_user_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:text="@string/ecran_choix_user_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/accueil_choix_user_admin_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/desc_img"
        android:src="@drawable/logo_choix_user" />

    <TextView
        android:id="@+id/accueil_choix_user_admin_qui_etes_vous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/accueil_choix_user_admin_txt"
        android:textColor="#000000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/accueil_choix_user_admin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/button_style"
            android:onClick="navigateToAdminScreen"
            android:padding="10dp"
            android:text="@string/administrateur_txt"
            android:textColor="@drawable/button_color_selector" />

        <Button
            android:id="@+id/accueil_choix_user_etudiant"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="180dp"
            android:background="@drawable/button_style"
            android:onClick="navigateToEtudiantScreen"
            android:padding="10dp"
            android:text="@string/etudiant_txt"
            android:textColor="@drawable/button_color_selector" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/accueil_choix_user_se_souvenir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/ecran_choix_user_checkbox_texte"
        android:textColor="#000000" />

</LinearLayout>