<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/etudiant_contact_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:text="@string/etudiant_contact_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etudiant_contact_sujet_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/menu_contact_sujet"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/message_contact"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/menu_contact_message"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/contact_bout_envoyer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/button_style"
        android:textColor="@drawable/button_color_selector"
        android:onClick="envoyerMessage"
        android:text="@string/menu_contact_bout_envoyer" />

</LinearLayout>