<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_crea_eta_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:layout_alignParentLeft="true"
            android:text="@string/administrateur_creation_eta_titre_texte" />
        
    </RelativeLayout>

    <EditText
        android:id="@+id/et_crea_eta_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_crea_eta_hint_nom"
        android:layout_gravity="center"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_crea_eta_ville"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_crea_eta_hint_ville"
        android:layout_gravity="center"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:inputType="text" />
    
    <Button
        android:id="@+id/crea_eta_bout_creer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_style"
        android:textColor="@drawable/button_color_selector" 
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:onClick="creerEtablissement"
        android:text="@string/bout_creer_txt"  />
    
</LinearLayout>