<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_crea_annee_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:text="@string/administrateur_creation_annee_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/admin_creation_annee_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/admin_crea_annee_hint_nom"
        android:inputType="text"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/admin_creation_annee_nom_eta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/admin_crea_annee_hint_etablissement"
            android:singleLine="true" />

        <Button
            android:id="@+id/crea_annee_bout_choisir_eta"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:onClick="openListEta"
            android:padding="10dp"
            android:text="Choisir"
            android:textColor="@drawable/button_color_selector" />
    </LinearLayout>

    <Spinner
        android:id="@+id/admin_creation_annee_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:prompt="@string/crea_annee_decoupage" />

    <CheckBox
        android:id="@+id/admin_creation_annee_is_last_year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Dernière année"
        android:textColor="#000000" />

    <Button
        android:id="@+id/crea_annee_bout_creer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:onClick="creerAnnee"
        android:padding="10dp"
        android:text="@string/bout_creer_txt"
        android:textColor="@drawable/button_color_selector" />

</LinearLayout>