<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/etudiant_ajouter_annees_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
			android:layout_centerInParent="true"
            android:contentDescription="@string/desc_img"
            android:src="@drawable/loupe" />

        <EditText
            android:id="@+id/etudiant_ajouter_annees_zone_recherche"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:hint="@string/etudiant_ajout_annees_hint_nom_annee_txt"
            android:inputType="text"
            android:layout_marginRight="50dp"
            android:layout_centerInParent="true" />
        
        <Button
            android:id="@+id/etudiant_ajouter_annees_bout_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:onClick="recherche"
            android:text="@string/bout_ok_txt" />

    </RelativeLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>