<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_ajout_admin_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:text="@string/administrateur_ajout_admin_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <AutoCompleteTextView
        android:id="@+id/admin_ajout_admin_ta_pseudo_auto_complete"
        android:layout_width="fill_parent"
        android:hint="@string/admin_ajout_admin_pseudo_txt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/admin_ajout_admin_no_admin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:gravity="center" />

    <Button
        android:id="@+id/admin_ajout_admin_bout_ajouter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_style"
        android:textColor="@drawable/button_color_selector" 
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:onClick="nommer"
        android:text="@string/admin_ajout_admin_bout_ajouter_texte" />

</LinearLayout>